# Ichika-Utils

./: README.md  pyproject.toml  setup.py  test.py
.github/workflows/: bandit.yml  deploy-pypi.yml  snyk.yml
src/ichika_utils/: main.py
