[tool.poetry]
name = "ichika-stats-utils"
version = "0.1.0"
description = "Stats Utils for Ichika"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=^3.8,<^3.11"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
